--- a/HtmlCssTutorial/My_Biography/my_project.css
+++ b/HtmlCssTutorial/My_Biography/my_project.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Raleway', sans-serif;
-    background-color: #5b8658;
+    background: linear-gradient(to bottom right, #0a183f, #c6d8f2);
   }
   
   .text-container {
@@ -19,7 +19,7 @@ body {
     color: rgba(225,225,225, .01);
     background-image: url("https://images.unsplash.com/photo-1499195333224-3ce974eecb47?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2cf549433129d4227d1879347b9e78ce&auto=format&fit=crop&w=1248&q=80");
     background-repeat: repeat;
-    -webkit-background-clip:text;
+    -webkit-background-clip: text;
     animation: animate 15s ease-in-out infinite;
     text-align: center;
     text-transform: uppercase;
